--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
   <video autoplay muted loop playsinline class="bg-video">
     <source src="filmy/film.mp4" type="video/mp4">
   </video>
-  <img src="ikony/logo.svg" alt="RoboInvest" class="fade-start">
+  <img src="ikony/Logo.svg" alt="RoboInvest" class="fade-start">
   <nav class="fade-start">
     <a href="#oferta">Oferta</a>
     <a href="#dla-kogo">Dla kogo</a>
