--- a/index.html
+++ b/index.html
@@ -337,7 +337,9 @@
       line-height: 1.6;
       display: flex;
       flex-direction: column;
-      gap: 150px;
+      gap: 100px;
+	  margin-top: -100px;
+	  padding-top: 10px;
     }
 
     .dla-kogo-inner h2 {
@@ -399,7 +401,7 @@
     }
 
     .blog-preview-head h2 {
-      font-size: 2.4em;
+      font-size: 2.2em;
       margin: 0 0 30px;
       line-height: 1.2;
       font-weight: 700;
@@ -575,6 +577,7 @@
       align-items: stretch;
       gap: 40px;
       margin-top: 20px;
+	  padding-top: 80px;
     }
 
     .kontakt-lewa,
@@ -586,20 +589,21 @@
     }
 
     .kontakt-lewa h2 {
-      font-size: 2.6em;
+      font-size: 3em;
       margin: 0 0 20px;
       line-height: 1.3;
     }
 
     .kontakt-lewa address {
+	  font-size: 1.3em;
       font-style: normal;
       margin-top: 20px;
       line-height: 1.8;
     }
 
     .hala-zdjecie {
-      width: 240px;
-      height: 240px;
+      width: 280px;
+      height: 280px;
       object-fit: cover;
       border-radius: 50%;
       margin: 0 auto 20px;
@@ -966,9 +970,11 @@
       <div class="kontakt-wrapper">
         <div class="kontakt-lewa">
           <h2>Jesteś zainteresowany<br />współpracą?</h2>
-
+		  
+		<address>
           <p>Skontaktuj się z nami mailowo lub telefonicznie</p>
-
+		</address>
+		
           <address>
             <strong>e-mail:</strong> biuro.roboinvest@gmail.com<br />
             <strong>m:</strong> +48 531 402 009<br />
