Aktualizacja strony: Enter w nagłówku sekcji slide

--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
       <div
         class="hero-slide"
         style="background-image:url('obrazy/slide3.jpg');"
-        data-title="Wdrażamy automatyzację tak, żeby produkcja mogła działać już jutro"
+        data-title="Wdrażamy automatyzację tak, żeby produkcja mogła<br> działać już jutro"
         data-desc="Przygotowujemy proces, ludzi i infrastrukturę pod nowe stanowiska.<br>Dbamy o uruchomienie i bezpieczeństwo. <br>Minimalizujemy przestoje i chaos przy starcie nowej linii."
       ></div>
     </div>
