Reload pierwszego obrazu slider

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=1280" />
+  <link rel="preload" as="image" href="obrazy/slide1.jpg">
   <title>RoboInvest – Świadoma automatyzacja i robotyzacja produkcji</title>
   <meta name="description" content="Pomagamy wdrażać rozwiązania z zakresu robotyki przemysłowej, automatyzacji i optymalizacji produkcji.">
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet">
