Zmiana czcionek na Roboto

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="preload" as="image" href="obrazy/slide1.jpg">
   <title>RoboInvest – Świadoma automatyzacja i robotyzacja produkcji</title>
   <meta name="description" content="Pomagamy wdrażać rozwiązania z zakresu robotyki przemysłowej, automatyzacji i optymalizacji produkcji.">
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
   <style>
     * {
@@ -25,7 +25,7 @@
 
     body {
       margin: 0;
-      font-family: 'DM Sans', sans-serif;
+      font-family: 'Roboto', sans-serif;
       color: #222;
       background-color: #f6f6f6;
     }
