Dodano meta tag weryfikacji Google

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8" />
+  <meta name="google-site-verification" content="mNdWz9KpZc_3eCyJSfgT96xnFP2UdR9cDoxjLSyjjV4" />
   <meta name="viewport" content="width=1280" />
   <link rel="preload" as="image" href="obrazy/slide1.jpg">
   <title>RoboInvest – Świadoma automatyzacja i robotyzacja produkcji</title>
