Poprawka SEO, linków i sitemap

--- a/index.html
+++ b/index.html
@@ -899,7 +899,7 @@
     <div class="blog-cards">
 
       <!-- KAFEL 1 -->
-      <a class="blog-card" href="blog/FAT_vs_SAT.html">
+      <a class="blog-card" href="blog/fat_vs_sat.html">
         <div class="blog-card-image"
              style="background-image:url('obrazy/blog-fat-sat.jpg');">
         </div>
@@ -913,7 +913,7 @@
       </a>
 
       <!-- KAFEL 2 -->
-      <a class="blog-card" href="blog/Odpowiedzialnosc_Bezpieczenstwo_Stanowiska.html">
+      <a class="blog-card" href="blog/odpowiedzialnosc_bezpieczenstwo_stanowiska.html">
         <div class="blog-card-image"
              style="background-image:url('obrazy/blog-bhp.jpg');">
         </div>
@@ -928,7 +928,7 @@
       </a>
 
       <!-- KAFEL 3 -->
-      <a class="blog-card" href="blog/URS.html">
+      <a class="blog-card" href="blog/urs.html">
         <div class="blog-card-image"
              style="background-image:url('obrazy/blog-urs.jpg');">
         </div>
